# DeeperShallowSyntax

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
langtest/: calc.language  calc2.language  dependent.language  prog1.calc.language  stlc.language  test.dependent.language  test.stlc.language  test2.stlc.language
langtest/Presentation/Example1-STLC/: stlc.language  test.stlc.language
langtest/Presentation/Example2-STLC-annotations/: stlc-ann.language  test.stlc-ann.language  test0.stlc-ann.language
langtest/Presentation/Example4-Simple-Polymorphism/: stlc-ann.language  test.stlc-ann.language  test0.stlc-ann.language
langtest/Presentation/Example5-Dependent-Types/: dependent.language
langtest/dependent/: dependent.language  test.dependent.language  test2.dependent.language  test3.dependent.language  test4.dependent.language
langtest/experiments/depthyidea/: theory.language
langtest/experiments/extensional/: extensional.language
langtest/experiments/matching/: match.language  match2.language  test1.match.language  test1.match2.language
langtest/simplePolymorphism/: example1.simple.language  simple.language
langtest/test/: test.language
src/: extension.ts  test.ts
src/extensionOcamlComponent/: .gitignore  dune-project  example.txt  extensionOcamlComponent.opam  notes.txt  todo.txt
src/extensionOcamlComponent/lib/: dune  parsing.ml  specSpec.ml  typeSystem.ml  typecheck.ml  unification.ml  unification2.ml  unificationDebruin.ml  util.ml
src/extensionOcamlComponent/test/: bottomup.ml  cases.txt  dune  language.ml  parsing.ml  testFullSystem.ml  test_extensionOcamlComponent.ml  topdown.ml  topdown2.ml
src/test/: extension.test.ts
