(lang dune 3.12)

(name extensionOcamlComponent)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Jacob Prinz")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name extensionOcamlComponent)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
