(library
 (flags
  (:standard -warn-error "-unused-value-declaration" -warn-error "-unused-open"
   -warn-error "-unused-constructor" -warn-error "-unused-extension" -warn-error "-unused-type-declaration"
   -warn-error "-unused-var-strict")
  )
 (modules parsing unification typeSystem)
 (preprocess (pps ppx_import ppx_deriving.show ppx_deriving.ord))
 (name extensionOcamlComponent))
