(library
 (flags
  (:standard -warn-error "-unused-value-declaration" -warn-error "-unused-open"
   -warn-error "-unused-constructor" -warn-error "-unused-extension" -warn-error "-unused-type-declaration"
   -warn-error "-unused-var-strict" -warn-error "-nonreturning-statement")
  )
 (libraries js_of_ocaml)
 (modules parsing unification typeSystem typecheck specSpec util unification2)
 (preprocess (pps ppx_import ppx_deriving.show ppx_deriving.ord js_of_ocaml-ppx))
 (name extensionOcamlComponent))
