(test
 (name test_extensionOcamlComponent)
 (flags
  (:standard -warn-error "-unused-value-declaration" -warn-error "-unused-open"
   -warn-error "-unused-constructor" -warn-error "-unused-extension" -warn-error "-unused-type-declaration"
   -warn-error "-unused-var-strict")
  )
 (modules bottomup test_extensionOcamlComponent topdown language topdown2 parsing)
 (libraries str))
